# fakephoto-ai

./: .coveragerc  .dockerignore  .env.example  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  LICENSE  README.md  app.json  docker-compose.dev.yml  docker-compose.yml  fly.toml  pyproject.toml  pytest.ini  railway.json  railway.yaml  render.yaml  requirements-dev.txt  requirements.txt  vercel.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml  deploy-backend.yml  deploy-frontend.yml  release.yml
docs/: API.md  landing-page.html  tutorial-api.md  tutorial-batch.md  tutorial-python.md  tutorial-quickstart.md
docs/nextjs-landing/: package.json
docs/nextjs-landing/app/: globals.css  layout.tsx
docs/nextjs-landing/components/: features.tsx  header.tsx  hero.tsx  particle-background.tsx  theme-toggle.tsx
docs/nextjs-landing/components/ui/: button.tsx
landing/: README.md  index.html  package.json  tailwind.config.js
landing/src/: App.tsx  index.css
landing/src/components/: CTA.tsx  Features.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  Models.tsx  Navbar.tsx
scripts/: deploy.sh  setup.sh
src/fakephoto/: __init__.py  cli.py  detector.py
src/fakephoto/aggregators/: confidence_aggregator.py
src/fakephoto/models/: anthropic_client.py  base.py  gemini_client.py  openai_client.py
src/fakephoto/preprocessors/: image_processor.py  video_processor.py
tests/: conftest.py
tests/fixtures/mock-api-responses/: anthropic_ai_response.json  anthropic_real_response.json  anthropic_size_error.json  gemini_ai_response.json  gemini_invalid_format_error.json  gemini_real_response.json  openai_ai_response.json  openai_auth_error.json  openai_rate_limit_error.json  openai_real_response.json
tests/integration/: test_end_to_end.py
tests/unit/: test_aggregator.py  test_detector.py  test_models.py  test_preprocessors.py
tests/utils/: helpers.py  mock_clients.py
